--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </li>
       </ul>
 
-      <form class="add text-center my-4">
+      <form class="add text-center my-4" onSubmit="return false;">
         <label class="text-light">Add a new todo...</label>
         <input class="form-control m-auto" type="text" name="add" />
       </form>
